<resources>
    <string name="app_name">Geek</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_chapter">ChapterActivity</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="nav_runoob">编程教程</string>
    <string name="nav_online_coding">在线编程</string>
    <string name="nav_resource">编程资源</string>
    <string name="nav_react">ReactNative</string>
    <string name="nav_skins">换肤</string>
    <string name="nav_about">关于</string>
    <string name="nav_setting">设置</string>
    <string name="nav_exit">退出</string>
</resources>
